[gd_scene load_steps=4 format=3 uid="uid://c0dfo8lc0utw8"]

[ext_resource type="FontFile" uid="uid://bedbafqcdtba4" path="res://assets/fonts/superstar_memesbruh03.ttf" id="1_ee1jd"]
[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_m2tqj"]
[ext_resource type="Texture2D" uid="uid://bt2ox8jxjg30f" path="res://assets/sprites/cerber_bg.png" id="3_bajt5"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_m2tqj")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_bajt5")
expand_mode = 2
stretch_mode = 5

[node name="Screen1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartGameBtn" type="Button" parent="Screen1"]
layout_mode = 0
offset_left = 150.0
offset_top = 312.0
offset_right = 750.0
offset_bottom = 462.0
theme_override_fonts/font = ExtResource("1_ee1jd")
theme_override_font_sizes/font_size = 64
text = "Start Game"

[node name="SettingsBtn" type="Button" parent="Screen1"]
layout_mode = 0
offset_left = 150.0
offset_top = 512.0
offset_right = 750.0
offset_bottom = 662.0
theme_override_fonts/font = ExtResource("1_ee1jd")
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="Screen2" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBtn" type="Button" parent="Screen2"]
layout_mode = 0
offset_left = 150.0
offset_top = 200.0
offset_right = 750.0
offset_bottom = 350.0
theme_override_fonts/font = ExtResource("1_ee1jd")
theme_override_font_sizes/font_size = 64
text = "Back"

[node name="Label" type="Label" parent="Screen2"]
layout_mode = 0
offset_left = 235.0
offset_top = 451.0
offset_right = 627.0
offset_bottom = 515.0
theme_override_fonts/font = ExtResource("1_ee1jd")
theme_override_font_sizes/font_size = 64
text = "Some settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Screen2"]
layout_mode = 0
offset_left = 235.0
offset_top = 562.0
offset_right = 627.0
offset_bottom = 626.0
theme_override_fonts/font = ExtResource("1_ee1jd")
theme_override_font_sizes/font_size = 64
text = "Some settings"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Screen1/StartGameBtn" to="." method="change_screen" binds= ["game"]]
[connection signal="pressed" from="Screen1/SettingsBtn" to="." method="change_screen" binds= ["settings"]]
[connection signal="pressed" from="Screen2/BackBtn" to="." method="change_screen" binds= ["main"]]
